trunk/Archive2/dd/1f57dbb43002bf/output
clang version 3.4 (tags/RELEASE_34/final 206911)
Target: x86_64-unknown-linux-gnu
Thread model: posix
main.cpp:3:1: error: 'auto' return without trailing return type
auto func()
^
main.cpp:9:12: error: no viable conversion from 'Test' to 'int'
    return Test{};
           ^~~~~~
main.cpp:15:19: error: member reference base type 'int' is not a structure or union
    std::cout << t.f() << std::endl;
                 ~^~
main.cpp:19:5: error: expected a class or namespace
int func_Test::f()
    ^
4 errors generated.
